AC_INIT(SENSE,2.0)
AC_PROG_CXX(g++ g++3 c++ CC)
AC_ARG_ENABLE(debug, "debugging enabled", [CCFLAGS="-Wall -g"], [CCFLAGS="-Wall -O6"])
AC_CHECK_PROG(MAKE, make, make, make)
AC_LANG(C++)

AC_CHECK_HEADER(inttypes.h, [HAVE_INTTYPES_H="1"], [HAVE_INTTYPES_H="0"])
AC_CHECK_TYPE(int8_t,[HAVE_INT8_T="1"])
AC_CHECK_TYPE(int16_t,[HAVE_INT16_T="1"])
AC_CHECK_TYPE(int32_t,[HAVE_INT32_T="1"])
AC_CHECK_TYPE(int64_t,[HAVE_INT64_T="1"])
AC_CHECK_TYPE(uint8_t,[HAVE_UINT8_T="1"])
AC_CHECK_TYPE(uint16_t,[HAVE_UINT16_T="1"])
AC_CHECK_TYPE(uint32_t,[HAVE_UINT32_T="1"])
AC_CHECK_TYPE(uint64_t,[HAVE_UINT64_T="1"])

AC_SUBST(HAVE_INT8_T)
AC_SUBST(HAVE_INT16_T)
AC_SUBST(HAVE_INT32_T)
AC_SUBST(HAVE_INT64_T)
AC_SUBST(HAVE_UINT8_T)
AC_SUBST(HAVE_UINT16_T)
AC_SUBST(HAVE_UINT32_T)
AC_SUBST(HAVE_UINT64_T)
AC_SUBST(CCFLAGS)
AC_SUBST(HAVE_INTTYPES_H)
AC_OUTPUT(Makefile common/config.h)


